testsuite/tests/parser/should_fail/T3811d.hs

module T3811d where

data D a = D a

class C b (D Char) b

